--- a/views/hitlist.erb
+++ b/views/hitlist.erb
@@ -1,3 +1,12 @@
+<script type="text/javascript">
+	$(document).ready(function() {
+		$('.toggle').click(function(e) {
+			$(this).parents('.entry').toggleClass('expanded').toggleClass('collapsed');
+			e.preventDefault();
+		});
+	});
+</script>
+
 <% @entries.each_with_index do |entry, i| %>
 <div class="entry <% if i == 0 %>expanded<% else %>collapsed<% end %>">
 	<div class="titlebar">
