--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.1.0/build/cssreset/reset-min.css">
-	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.1.0/build/cssbase/base-min.css">
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.1.0/build/cssreset/reset-min.css" />
+	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.1.0/build/cssbase/base-min.css" />
 	<link rel="stylesheet" type="text/css" href="/style.css" media="screen" />
 	 
 	<script type="text/javascript" src="/jquery-1.4.2.min.js"></script>
@@ -23,6 +23,5 @@
 
 <%= yield %>
 
-</div>
 </body>
 </html>
