--- a/views/hitlist.erb
+++ b/views/hitlist.erb
@@ -48,10 +48,8 @@
 </div>
 <% end %>
 
-<div class="pagination">
-	<ol>
-		<li class="selected">1</li>
-		<li class="unselected">2</li>
-		<li class="unselected">3</li>
-	</ol>
-</div>
+<ol class="pagination">
+	<li class="selected">1</li>
+	<li class="unselected">2</li>
+	<li class="unselected">3</li>
+</ol>
