--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,6 +21,11 @@
 	</div> 
 </h1>
 
+<ol class="navigation">
+   <li><a href="/admin/list">Log</a></li>
+   <li><a href="/admin/payloads">Payloads</a></li>
+</ol>
+
 <%= yield %>
 
 </body>
