Since pagination doesn't work, don't bother showing anything at all.

--- a/views/hitlist.erb
+++ b/views/hitlist.erb
@@ -38,8 +38,10 @@
 </div>
 <% end %>
 
+<% if false %>
 <ol class="pagination">
 	<li class="selected">1</li>
 	<li class="unselected">2</li>
 	<li class="unselected">3</li>
 </ol>
+<% end %>
