--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,9 +5,9 @@
 	
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.1.0/build/cssreset/reset-min.css" />
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.1.0/build/cssbase/base-min.css" />
-	<link rel="stylesheet" type="text/css" href="/style.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
 	 
-	<script type="text/javascript" src="/jquery-1.4.2.min.js"></script>
+	<script type="text/javascript" src="../jquery-1.4.2.min.js"></script>
 	<script type="text/javascript">
    	$(document).ready(function() {
    		$('.toggle').click(function(e) {
@@ -22,7 +22,7 @@
 <body>
 
 <h1 class="title"> 
-	<img src="/logo.png" alt="Whistleblower" /> 
+	<img src="../logo.png" alt="Whistleblower" /> 
 	<div class="about">
 		by<br />
 		<a href="http://rgov.org/">Ryan Govostes</a>
@@ -30,8 +30,8 @@
 </h1>
 
 <ol class="navigation">
-   <li><a href="/admin/list">Log</a></li>
-   <li><a href="/admin/payloads">Payloads</a></li>
+   <li><a href="../admin/list">Log</a></li>
+   <li><a href="../admin/payloads">Payloads</a></li>
 </ol>
 
 <%= yield %>
